<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#98D8C1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_menu"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_options" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/food2"
                    app:shapeAppearanceOverlay="@style/CircleAppearance" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_side_menu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#98D8C1"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/food"
                app:shapeAppearanceOverlay="@style/CircleAppearance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="#33000000" />

        <LinearLayout
            android:id="@+id/btn_nav_start"
            style="@style/MyMenuItemStyle">

            <ImageView
                style="@style/MyMenuIconStyle"/>
<!--                android:src="@drawable/ic_list" -->
                />

            <TextView
                style="@style/MyMenuTextStyle"
                android:text="@string/start_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_nav_history"
            style="@style/MyMenuItemStyle">

            <ImageView
                style="@style/MyMenuIconStyle"/>
<!--                android:src="@drawable/ic_history" -->
                />

            <TextView
                style="@style/MyMenuTextStyle"
                android:text="@string/history_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_nav_diagram"
            style="@style/MyMenuItemStyle">

            <ImageView
                style="@style/MyMenuIconStyle"/>
<!--                android:src="@drawable/ic_diagram" -->
                />

            <TextView
                style="@style/MyMenuTextStyle"
                android:text="@string/analysis_title" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_nav_exit"
            style="@style/MyMenuItemStyle"
            android:layout_marginBottom="20dp">

            <ImageView
                style="@style/MyMenuIconStyle"/>
<!--                android:src="@drawable/ic_exit"-->


                />

            <TextView
                style="@style/MyMenuTextStyle"
                android:text="@string/exit" />
        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>